--- a/GitHubSearcher/index.html
+++ b/GitHubSearcher/index.html
@@ -12,9 +12,11 @@
 
     <h1>GitHubSearcher</h1>
 
+    <form action="submit">
 
-    <input type="text" type="submit">
-    <button>search</button>
+        <input type="text" type="submit">
+
+    </form>
 
     <div>
 
